   These changes should increase the usability and accuracy of the
   'check while typing' feature while not being much slower (if ever).
 * src/gui.c, src/scplugin.c, src/scplugin.h:
   Display accelerator on the 'Default' menu item.
 * src/gui.c, src/gui.h, src/scplugin.c, src/scplugin.h, src/speller.c,
   src/speller.h:
   Prefix all non-static functions which sc_ to avoid symbol clashes.


2009-02-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/sc_plugin.c:
   Use Geany's main_locale_init() to init the localisation system.


2009-02-14  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/speller.c:
   Display a pulsing progressbar while checking large documents.


2009-02-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/gui.c:
   Remove unnecessary gpointer casts.
   If the toolbar item is disabled, just hide it instead of destroying
   it.


2009-02-02  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * configure.in, Makefile.am:
   Install documentation files into the geany-plugins doc dir.
 * src/Makefile.am, src/scplugin.c:
   Implement plugin_help() to open the Readme file in Geany.


2009-01-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/gui.c:
   Don't enable mnemonics for "Add ... to Dictionary" and "Ignore All"
   menu items to prevent wrongly displayed labels.


2009-01-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/scplugin.c, src/speller.c:
   Update to Geany API 126 - LexOMS was removed.


2009-01-14  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/scplugin.c:
   Fix deprecated usage of g_win32_get_package_installation_directory(),
   pass NULL as package name.
 * po/de.po, src/gui.c, src/scplugin.c, src/speller.c, src/gui.h,
   src/scplugin.h, src/speller.h:
   Update copyright information.


2008-12-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/scplugin.c, src/gui.c, src/speller.c: