@@ -14,6 +14,8 @@
  * src/gui.c, src/gui.h, src/scplugin.c, src/scplugin.h, src/speller.c,
    src/speller.h:
    Prefix all non-static functions which sc_ to avoid symbol clashes.
+ * src/speller.c:
+   Synchronise lexer checks with Geany's new filetypes.
 
 
 2009-02-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
